# infernet-ml

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: python_ci.yaml
services/: __init__.py
services/bark_hf_inference_service/: __init__.py  bark_hf_inference_service.env.example  requirements.txt
services/hf_inference_client_service/: __init__.py  requirements.txt
services/llm_inference_service/: __init__.py  llm_inf.env.example  requirements.txt
services/onnx_inference_service/: __init__.py  onnx_inference_service.env.example
services/torch_inference_service/: __init__.py  requirements.txt  torch_inference_service.env.example
src/infernet_ml/: __init__.py
src/infernet_ml/utils/: arweave.py  css_mux.py  decode.py  hf_types.py  model_loader.py  service_models.py
src/infernet_ml/workflows/: exceptions.py
src/infernet_ml/workflows/inference/: bark_hf_inference_workflow.py  base_inference_workflow.py  css_inference_workflow.py  hf_inference_client_workflow.py  onnx_inference_workflow.py  tgi_client_inference_workflow.py  torch_inference_workflow.py  tts_inference_workflow.py
tests/: test_arweave.py  test_bark_hf_inference_service.py  test_css_inference_workflow.py  test_hf_inference_service.py  test_hf_inference_workflow.py  test_llm_inference_service.py  test_onnx_inference_service.py  test_torch_inference_service.py
